<resources>
    <string name="app_name">小强单车</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="permission_location_rationale">当前应用需要使用定位权限，如果不授予权限，定位功能将无法使用</string>
    <string name="permission_sensor_rationale">当前应用需要使用传感器权限，如果不授予权限，部分功能将无法使用</string>
    <string name="permission_storage_rationale">当前应用需要使用读写内存卡权限，如果不授予权限，部分功能将无法使用</string>
    <string name="permission_camera_rationale">当前应用需要使用相机权限，如果不授予权限，扫码功能将无法使用</string>
    <string name="permission_camera_head">当前应用需要使用相机权限，如果不授予权限，上传头像功能将无法使用</string>
    <string name="permission_camera_photo">当前应用需要使用相机权限，如果不授予权限，相机功能将无法使用</string>
    <string name="permission_contact_rationale">当前应用需要使用通讯录权限，如果不授予权限，将无法直接从通讯获取推荐人手机号</string>
    <string name="permission_location_never_askagain">你已经禁止了定位权限，并且勾选了不再询问，请到设置里面打开定位权限，否则将会影响你的正常使用</string>
    <string name="permission_contact_never_askagain">你已经禁止了通讯录权限，并且勾选了不再询问，请到设置里面打开通讯录权限，否则将会影响你的正常使用</string>
    <string name="permission_camera_never_askagain">你已经禁止了相机权限，并且勾选了不再询问，请到设置里面打开相机权限，否则将会影响你的正常使用</string>
    <string name="permission_sensor_never_askagain">你已经禁止了传感器权限，并且勾选了不再询问，请到设置里面打开传感器权限，否则将会影响你的正常使用</string>
    <string name="permission_storage_never_askagain">你已经禁止了存储卡权限，并且勾选了不再询问，请到设置里面打开存储卡权限，否则将会影响你的正常使用</string>
    <string name="home_page">首页</string>
    <string name="all">全部</string>
    <string name="single">单人</string>
    <string name="doubles">双人</string>
    <string name="family">家庭</string>
    <string name="My_wallet">我的钱包</string>
    <string name="My_schedule">我的行程</string>
    <string name="My_message">我的消息</string>
    <string name="invite_friends">邀请好友</string>
    <string name="user_guide">用户指南</string>
    <string name="register_login">注册/登录</string>
    <string name="personal_information">个人信息</string>
    <string name="Avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="Certification">实名认证</string>
    <string name="Phone_number">手机号</string>
    <string name="Credit_Score">信用积分</string>
    <string name="detail">明细</string>
    <string name="The_fare_balance">车费余额(元)</string>
    <string name="Recharge">充值</string>
    <string name="guarantee_deposit">押金</string>
    <string name="yuan">元</string>
    <string name="The_deposit_refund">押金退款</string>
    <string name="Charge_the_deposit">充押金</string>
    <string name="Rules_of_Use">使用规则</string>
    <string name="View_the_history_of_coupons">查看历史优惠券 ></string>
    <string name="Invite_friends_can_get_coupons">邀请好友，分享行程可以获取优惠券哦~</string>
    <string name="Invite_friends_share_life">邀请好友加入  共享绿色生活</string>
    <string name="Enter_your_phone_number">好友输入你的手机号邀请码并注册成功</string>
    <string name="Can_increase_the_credit_value">可增加双方信用值，获取更多奖励！</string>
    <string name="QQ_friend">QQ好友</string>
    <string name="QQ_zone">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat_Moments">微信朋友圈</string>
    <string name="Check_the_new_version">检查新版本</string>
    <string name="about_us">关于我们</string>
    <string name="Log_out">退出登录</string>
    <string name="Where_to_find_me">去哪找我</string>
    <string name="cancel">取消</string>
    <string name="my_location">我的位置</string>
    <string name="Empty_the_history">清空历史记录</string>
    <string name="Report_illegal_stop">举报违停</string>
    <string name="Fault_finding">发现故障</string>
    <string name="Use_help">使用帮助</string>
    <string name="take_photos">拍照</string>
    <string name="Choose_from_the_phone_album">从手机相册选择</string>
    <string name="save">保存</string>
    <string name="Please_enter_a_nickname">请输入昵称</string>
    <string name="Nickname_cannot_contain_expression">昵称不能包含表情</string>
    <string name="Nickname_cannot_contain_symbol">昵称不能包含符号</string>
    <string name="Certified">已认证</string>
    <string name="Not_certified">未认证</string>
    <string name="Not_carm_p">无法获取相机权限，请到设置里面打开相机权限</string>
    <string name="allow">允许</string>
    <string name="refuse">拒绝</string>
    <string name="Phone_verification">手机验证</string>
    <string name="Please_enter_the_phone_number_correctly">请正确输入手机号</string>
    <string name="You_have_not_got_the_verification_code">你还未获取验证码</string>
    <string name="Send_failed_please_try_again">发送失败，请重试</string>
    <string name="Charge_deposit">押金充值</string>
    <string name="Please_enter_your_phone_number">请输入手机号</string>
    <string name="Verification_Code">验证码</string>
    <string name="Please_enter_the_verification_code">请输入验证码</string>
    <string name="Get_verification_code">获取验证码</string>
    <string name="start">开始</string>
    <string name="Click_on_the_start">点击开始，即表示同意</string>
    <string name="Agreement">《小强单车用户协议》</string>
    <string name="second">秒</string>

    <!--行程分享-->
    <string name="Title">小强单车行程分享</string>
    <string name="ShareText">我在小强单车完成了一次骑行，快来一起骑行吧</string>
    <string name="ShareComment">邀请您加入小强单车，共享绿色生活</string>
    <string name="InviteComment">扫码骑行，低碳生活，快邀请你的小伙伴一起加入吧！</string>
    <string name="InviteText">扫码骑行，告别堵心</string>
</resources>
