<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_contanier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/layout_header_view" />

    <RelativeLayout
        android:id="@+id/rl_ci_header"
        style="@style/RlStyle"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/TvStyle"
            android:text="@string/Avatar"/>

        <ImageView
            android:id="@+id/iv_next"
            style="@style/IvNextStyle" />

        <cn.estronger.bike.widget.CircularImage
            android:id="@+id/ci_head_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="-10dp"
            android:layout_toLeftOf="@id/iv_next"
            android:src="@mipmap/user_avatar_default" />

    </RelativeLayout>
    <View style="@style/LineStyle" />

    <RelativeLayout
        android:id="@+id/rl_nick_name"
        style="@style/RlStyle">

        <TextView
            style="@style/TvStyle"
            android:text="@string/nickname" />

        <ImageView
            android:id="@+id/iv_nick_name"
            style="@style/IvNextStyle" />

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="-10dp"
            android:layout_toLeftOf="@id/iv_nick_name"/>

    </RelativeLayout>
    <View style="@style/LineStyle" />

    <RelativeLayout
        android:id="@+id/rl_real_name"
        style="@style/RlStyle">

        <TextView
            style="@style/TvStyle"
            android:text="@string/name" />


        <TextView
            android:id="@+id/tv_real_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <View style="@style/LineStyle" />

    <RelativeLayout
        android:id="@+id/rl_certification"
        style="@style/RlStyle">

        <TextView
            style="@style/TvStyle"
            android:text="@string/Certification" />

        <ImageView
            android:id="@+id/iv_certification"
            style="@style/IvNextStyle" />

        <TextView
            android:id="@+id/tv_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="-10dp"
            android:layout_toLeftOf="@id/iv_certification"/>

    </RelativeLayout>
    <View style="@style/LineStyle" />

    <RelativeLayout
        android:id="@+id/rl_phone"
        style="@style/RlStyle">

        <TextView
            style="@style/TvStyle"
            android:text="@string/Phone_number" />

        <ImageView
            android:id="@+id/iv_phone"
            style="@style/IvNextStyle" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="-10dp"
            android:layout_toLeftOf="@id/iv_phone" />

    </RelativeLayout>


</LinearLayout>