<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_contanier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/layout_header_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#3b3b3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Invite_friends_share_life"/>
        <View
            android:layout_width="match_parent"
            android:background="#181818"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/tv"
            android:layout_height="1dp"/>
        <View
            android:layout_width="match_parent"
            android:background="#181818"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv"
            android:layout_height="1dp"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Enter_your_phone_number"/>
    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Can_increase_the_credit_value"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="80dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/user_share_qq"/>
            <TextView
                android:text="@string/QQ_friend"
                android:textSize="13sp"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_qzone"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/user_share_qzone"/>
            <TextView
                android:text="@string/QQ_zone"
                android:textSize="13sp"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_sina"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/user_share_microblog"/>
            <TextView
                android:text="@string/sina_weibo"
                android:textSize="13sp"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="80dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/user_share_wechat"/>
            <TextView
                android:text="@string/wechat_friend"
                android:textSize="13sp"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_moment"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/user_share_moment"/>
            <TextView
                android:text="@string/wechat_Moments"
                android:layout_marginTop="2dp"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>