<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_contanier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"></LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_title"
        style="@style/tittleStyle"
        android:layout_below="@id/view_header">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="13dp"
            android:src="@drawable/back_ic_seletor" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nickname"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/green_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/et_nick"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/Please_enter_a_nickname"
            android:textSize="14sp"
            android:maxLength="15"
            android:singleLine="true"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>