<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#55000000" >

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View style="@style/LineStyle"
            android:layout_marginLeft="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/item_popupwindows_camera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bt_nobgd"
                android:text="@string/take_photos"
                android:textAllCaps="false"
                android:textColor="#585858"/>
        </LinearLayout>

        <View style="@style/LineStyle"
            android:layout_marginLeft="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/item_popupwindows_Photo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bt_nobgd"
                android:text="@string/Choose_from_the_phone_album"
                android:textAllCaps="false"
                android:textColor="#585858" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#f5f5f5"/>

        <Button
            android:id="@+id/item_popupwindows_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bt_nobgd"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#585858" />
    </LinearLayout>

</RelativeLayout>